--- a/epm3032_src/EPM3032_YM2149x2.qsf
+++ b/epm3032_src/EPM3032_YM2149x2.qsf
@@ -57,7 +57,7 @@ set_location_assignment PIN_16 -to bc1
 set_location_assignment PIN_14 -to bdir
 set_location_assignment PIN_18 -to clk175
 set_location_assignment PIN_43 -to clk350
-set_location_assignment PIN_33 -to d[7]
+set_location_assignment PIN_26 -to d[7]
 set_location_assignment PIN_39 -to d[6]
 set_location_assignment PIN_40 -to d[5]
 set_location_assignment PIN_5 -to d[4]
@@ -73,3 +73,4 @@ set_location_assignment PIN_21 -to beeper
 set_location_assignment PIN_24 -to tapeout
 set_location_assignment PIN_4 -to reset
 set_location_assignment PIN_27 -to ioge_c
+set_location_assignment PIN_33 -to d7_alt
