>> auto detect and division cpu clock 3.5/7 MHz for YM.

--- a/epm3032_src/EPM3032_YM2149x2.qsf
+++ b/epm3032_src/EPM3032_YM2149x2.qsf
@@ -49,22 +49,10 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name VERILOG_FILE EPM3032_YM2149x2.v
 set_global_assignment -name MAX7000_DEVICE_IO_STANDARD "3.3-V LVTTL"
 set_location_assignment PIN_9 -to a1
-set_location_assignment PIN_20 -to a8[1]
-set_location_assignment PIN_19 -to a8[0]
 set_location_assignment PIN_29 -to a14
 set_location_assignment PIN_31 -to a15
 set_location_assignment PIN_16 -to bc1
 set_location_assignment PIN_14 -to bdir
-set_location_assignment PIN_18 -to clk175
-set_location_assignment PIN_43 -to clk350
-set_location_assignment PIN_26 -to d[7]
-set_location_assignment PIN_39 -to d[6]
-set_location_assignment PIN_40 -to d[5]
-set_location_assignment PIN_5 -to d[4]
-set_location_assignment PIN_41 -to d[3]
-set_location_assignment PIN_37 -to d[2]
-set_location_assignment PIN_28 -to d[1]
-set_location_assignment PIN_34 -to d[0]
 set_location_assignment PIN_6 -to iorq
 set_location_assignment PIN_8 -to m1
 set_location_assignment PIN_12 -to wr
@@ -73,4 +61,18 @@ set_location_assignment PIN_21 -to beeper
 set_location_assignment PIN_24 -to tapeout
 set_location_assignment PIN_4 -to reset
 set_location_assignment PIN_27 -to ioge_c
-set_location_assignment PIN_33 -to d7_alt
+set_location_assignment PIN_26 -to d7_alt
+set_location_assignment PIN_44 -to a2
+set_location_assignment PIN_25 -to covox
+set_location_assignment PIN_34 -to d_0
+set_location_assignment PIN_41 -to d_3
+set_location_assignment PIN_5 -to d_4
+set_location_assignment PIN_40 -to d_5
+set_location_assignment PIN_39 -to d_6
+set_location_assignment PIN_33 -to d_7
+set_location_assignment PIN_43 -to cpu_clock
+set_location_assignment PIN_18 -to ym_clock
+set_location_assignment PIN_19 -to ym_0
+set_location_assignment PIN_20 -to ym_1
+set_location_assignment PIN_37 -to int
+set_location_assignment PIN_28 -to test
