--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,8 @@ Thumbs.db
 /epm3032_src/db
 /epm3032_src/incremental_db
 /epm3032_src/output_files
-/epm3032_src/EPM3032_YM2149x2.v.bak
 /epm3032_src/EPM3032_YM2149x2.qws
-*.bak
 /sch_and_pcb/epm3032_ym2149x2-backups
+*.bak
+*.vcd
+/epm3032_src/EPM3032_YM2149x2
