--- a/epm3032_src/EPM3032_YM2149x2.qsf
+++ b/epm3032_src/EPM3032_YM2149x2.qsf
@@ -44,8 +44,6 @@ set_global_assignment -name PROJECT_CREATION_TIME_DATE "20:15:30  MAY 20, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR "-1"
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name VERILOG_FILE EPM3032_YM2149x2.v
 set_global_assignment -name MAX7000_DEVICE_IO_STANDARD "3.3-V LVTTL"
 set_location_assignment PIN_9 -to a1
@@ -75,5 +73,10 @@ set_location_assignment PIN_18 -to ym_clock
 set_location_assignment PIN_19 -to ym_0
 set_location_assignment PIN_20 -to ym_1
 set_location_assignment PIN_37 -to int
-set_location_assignment PIN_28 -to test
 set_location_assignment PIN_2 -to dos
+set_global_assignment -name TIMEQUEST_MULTICORNER_ANALYSIS OFF
+set_global_assignment -name SMART_RECOMPILE ON
+set_global_assignment -name OPTIMIZE_HOLD_TIMING OFF
+set_global_assignment -name OPTIMIZE_MULTI_CORNER_TIMING OFF
+set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
+set_location_assignment PIN_28 -to rd
